# system-prompts-and-models-of-ai-tools

./: .gitignore  ADVANCED_FEATURES_ACTIVATION.py  AI_LEAD_GENERATION_SYSTEM.py  ALL_FEATURES_COMPLETE.md  BUILD_STATUS.md  COMPLETE_DELIVERY.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_IMPLEMENTATION_REPORT_V2.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_GENERATION_COMPLETE.md  COMPREHENSIVE_TEST_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FULL_STACK.md  DEPLOYMENT_GUIDE_COMPLETE.md  FEATURES_IMPLEMENTATION_COMPLETE.md  FINAL_BUILD_DEPLOY.py  FINAL_COMPLETE.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SUMMARY.md  FINAL_TEST_GENERATION_REPORT.md  FIXES_APPLIED_REPORT.md  FRONTEND_BACKEND_INTEGRATION.md  FULL_STACK_BUILD_COMPLETE.md  FULL_STACK_GUIDE.md  GENERATION_COMPLETE.md  INFINITE_AI_COMPLETE_VIEW.py  INFINITE_AI_DEPLOYMENT.py  INFINITE_AI_SYSTEM.py  MAXIMUM_CAPACITY_STATUS.md  MAXIMUM_OVERDRIVE_CREATION.py  NEW_TESTS_QUICK_REFERENCE.md  NEXT_LEVEL_ACTIVATION.py  NEXT_LEVEL_AI_SYSTEM.py  PROJECT_COMPLETION_REPORT.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  SYSTEM_STATUS_REPORT.md  TESTING_GUIDE.md  (+38 more)
Traycer AI/: phase_mode_tools.json
agent/: __init__.py  cli.py
api/: README.md  by-pricing.json  by-type.json  features.json  index.json  search.json  statistics.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  app.json  docker-compose.yml  jest.config.json  package-lock.json  package.json  server-simple.js  (+4 more)
backend-v2/: .env.example  docker-compose.yml  package.json  tsconfig.json
(+375 files in other folders)
