[project]
name = "execute-agent"
version = "0.1.0"
description = "Interactive execute agent with tools and multiple model providers"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
ollama = ["requests>=2.31.0"]

[project.scripts]
execute-agent = "agent.cli:main"
